creusot/tests/should_fail/prusti/traits/homes.stderr
error: `&'a mut X` cannot be moved from `'x` to `'now` since it doesn't live long enough
       `'a` doesn't outlive `'now`
  --> homes.rs:11:5
   |
11 |     fn model(self) -> Y {
   |     ^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

